# objectness_score

./: CMakeLists.txt  README.md  package.xml
include/objectness_score/: Collector.h  Projector.h
include/uncertain_obstacle/: Projector.h
msg/: Matrix.msg  Result.msg
src/: Collector.cpp  Projector.cpp  objectness_score.cpp  uncertain_obstacle.cpp
